packages/bardash/lib/src/native/ffigen_pulse.dart

// Auto-generated by ffigen from native/pulse_shim.h. Do not edit.
//
// Regenerate:
//   dart run ffigen --config native/ffigen_pulse.yaml

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Dart FFI bindings for bardash pulse_shim (libpulse wrapper)
class PulseShimBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PulseShimBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PulseShimBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Read cached default sink/source state.
  /// Returns 1 if the context is ready, 0 otherwise.
  /// Out-params may be NULL.
  int pulse_shim_get(
    ffi.Pointer<ffi.Int> sink_pct,
    ffi.Pointer<ffi.Int> sink_muted,
    ffi.Pointer<ffi.Int> source_pct,
    ffi.Pointer<ffi.Int> source_muted,
  ) {
    return _pulse_shim_get(sink_pct, sink_muted, source_pct, source_muted);
  }

  late final _pulse_shim_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('pulse_shim_get');
  late final _pulse_shim_get = _pulse_shim_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Request an async refresh of server/sink/source info.
  void pulse_shim_refresh() {
    return _pulse_shim_refresh();
  }

  late final _pulse_shim_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('pulse_shim_refresh');
  late final _pulse_shim_refresh = _pulse_shim_refreshPtr
      .asFunction<void Function()>();

  /// Change default sink volume by delta percent points (e.g. +5 or -5).
  /// Returns 0 on success, -1 on failure.
  int pulse_shim_sink_volume_step(int delta_pct) {
    return _pulse_shim_sink_volume_step(delta_pct);
  }

  late final _pulse_shim_sink_volume_stepPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'pulse_shim_sink_volume_step',
      );
  late final _pulse_shim_sink_volume_step = _pulse_shim_sink_volume_stepPtr
      .asFunction<int Function(int)>();

  /// Start the threaded PulseAudio mainloop and connect.
  /// Returns 0 on success, -1 on failure.
  int pulse_shim_start() {
    return _pulse_shim_start();
  }

  late final _pulse_shim_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('pulse_shim_start');
  late final _pulse_shim_start = _pulse_shim_startPtr
      .asFunction<int Function()>();

  /// Disconnect and free the mainloop. Safe to call if not started.
  void pulse_shim_stop() {
    return _pulse_shim_stop();
  }

  late final _pulse_shim_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('pulse_shim_stop');
  late final _pulse_shim_stop = _pulse_shim_stopPtr
      .asFunction<void Function()>();

  /// 1 if volume/mute/server state changed since the last call (clears the flag).
  int pulse_shim_take_dirty() {
    return _pulse_shim_take_dirty();
  }

  late final _pulse_shim_take_dirtyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('pulse_shim_take_dirty');
  late final _pulse_shim_take_dirty = _pulse_shim_take_dirtyPtr
      .asFunction<int Function()>();

  /// Toggle mute on the default sink.
  /// Returns 0 on success, -1 on failure.
  int pulse_shim_toggle_mute() {
    return _pulse_shim_toggle_mute();
  }

  late final _pulse_shim_toggle_mutePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('pulse_shim_toggle_mute');
  late final _pulse_shim_toggle_mute = _pulse_shim_toggle_mutePtr
      .asFunction<int Function()>();
}
